# Thorn_AI_Agent

./: .gitignore  Incentive_formula.md  README.md  hardhat.config.ts  package-lock.json  package.json
contracts/: EVMTreasury.sol  Tulip.sol
contracts/OmniFarming/: EVMTreasuryV2.sol
contracts/interfaces/: IModule.sol
deploy/arbitrum/: 00_before.ts  01_deploy_ArbitrumTreasury.ts  02_deploy_CompoundV3StakingUSDCModule.ts
deploy/eth_sepolia/: 00_deploy_AAVEV3Pool.ts  01_deploy_SepoliaTreasury.ts  02_deploy_AAVELendingStakingUSDCModules.ts
deploy/hardhat/: 00_before.ts  00_deploy_Mock.ts  01_deploy_Tulip.ts  02_deploy_EVMTreasury.ts  03_deploy_AAVELendingStakingUSDCModules.ts  03_deploy_CompoundV3StakingUSDCModules.ts  04_deploy_OasisTreasury.ts  05_deploy_OasisIncentive.ts
deploy/sapphire_mainnet/: 00_before.ts  01_deploy_Tulip.ts
deploy/sapphire_testnet/: 01_deploy_Tulip.ts
deployments/arbitrum/: ArbitrumTreasury.json  ArbitrumTreasury_Implementation.json  ArbitrumTreasury_Proxy.json  CompoundV3StakingUSDCModule.json  CompoundV3StakingUSDCModule_Implementation.json  CompoundV3StakingUSDCModule_Proxy.json
deployments/eth_sepolia/: AAVELendingStakingUSDCModule.json  AAVELendingStakingUSDCModule_Implementation.json  AAVELendingStakingUSDCModule_Proxy.json  AAVEPool.json  SepoliaTreasury.json  SepoliaTreasury_Implementation.json  (+1 more)
doc/: EVMTreasury.md  Modules.md  Tulip.md
rofl/: Cargo.toml  compose.yaml  rofl.yaml
rofl/.cargo/: config.toml
rofl/src/: main.rs
scripts/: calTVL.ts
test/: Tulip.test.ts  flow.test.ts
utils/: constants.ts  helper.ts
(+42 files in other folders)
