[package]
name = "thorn-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.9.6" }
module-evm = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.9.6", package = "oasis-runtime-sdk-evm" }
rofl-utils = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "rofl-utils/v0.1.1" }
ethabi = { version = "18.0.0", default-features = false, features = ["std"] }
oasis-cbor = "0.5.1"
anyhow = "1.0"
async-trait = "0.1.77"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread"] }
serde_json = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
dotenvy = "0.15"
mockito = "1.5"
[build]
rustflags = ["-C", "target-feature=+aes,+ssse3"]
